objects/Account_MMS_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>configuration for Account MSS Section in Account Detail page</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Set_API__c</fullName>
        <label>Field Set API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Readonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <label>Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account MSS Setting</label>
</CustomObject>